# honyar

./: README.md
alink/: alinkapp  makefile
alink/aliprofile/: _TZ3000_0yfa8ngy.json  _TZ3210_xoj72sps.json
alink/pkg_tool/: pkg.sh
alink/pkg_tool/install/: install.sh
alink/pkg_tool/install/oem/: RkLunch.sh  S99honyar
alink/pkg_tool/install/userdata/: hydaemon
alink/src/: linkkit_app_gateway.c  linkkit_subdev.c  linkkit_subdev.h
alink/src/cloudlink/: cloudLink.c  cloudLinkCtrl.c  cloudLinkListFunc.c  cloudLinkReport.c
alink/src/scene/: more_control.c  more_control.h  scene.c  scene.h  scene_add.c  scene_database.c  scene_database.h
alinksdk/: .config  .gitignore  make.settings
alinksdk/.O/: .post-rules.mk  .sub-build.vars
alinksdk/.O/certs/: makefile  root_ca.d
alinksdk/.O/extension/: makefile
alinksdk/.O/external_libs/mbedtls/: makefile
alinksdk/.O/libalinksdk.objs/: .one_makefile  .sub-build.env
alinksdk/.O/libalinksdk.objs/wrappers/: makefile
alinksdk/.O/src/dev_bind/: bind_msg.d  bind_token.d  bind_utils.d  makefile
alinksdk/.O/src/dev_model/: dm_api.d  dm_cota.d  dm_ipc.d  dm_log_report.d  dm_message_cache.d  dm_msg_process.d  dm_opt.d  impl_linkkit.d  iotx_cm.d
alinksdk/.O/src/dev_reset/: makefile
alinksdk/.O/src/dynamic_register/: dynreg.d
alinksdk/.O/src/http2/: makefile
alinksdk/.O/src/infra/: infra_aes.d  infra_cjson.d  infra_json_parser.d  infra_log.d  infra_mem_stats.d  infra_net.d  infra_preauth.d  infra_prt_nwk_payload.d  infra_sha256.d  infra_string.d  infra_timer.d
alinksdk/.O/src/mqtt/: makefile  mqtt_api.d
alinksdk/.O/src/ota/: makefile  ota_coap.d  ota_fetch.d  ota_lib.d  ota_mqtt.d
alinksdk/.O/wrappers/tls/: HAL_TLS_mbedtls.d
alinksdk/output/eng/: sdk_include.h
alinksdk/output/eng/wrappers/: wrappers.c  wrappers.h
hylink/: hylinkapp  makefile
hylink/hydevicemanagesdk_scene/: Makefile
hylink/hydevicemanagesdk_scene/src/: action_list.c  action_list.h  bindAirConditioning.c  bindAirConditioning.h  cJSON.c  cJSON.h  callback.c  callback.h  circle_queue.c  common.h  condition_list.c  condition_list.h  config_line_item.c  config_line_item.h  ctrlSmartLock.c  ctrlSmartLock.h  custom_attribute.h  custonm_attribute.c  db_api.c  deviceConfigure.c  deviceConfigure.h  deviceList.c  deviceList.h  error_no.c  error_no.h  fastJoin.c  fastJoin.h  full_scene.c  full_scene.h  getpath.c  getpath.h  group.c  group.h  hashtable.c  hy_device_manage.c  hy_device_manage.h  hyprotocol.c  hyprotocol.h  json_key.h  link_list.c  (+36 more)
hylink/local_scene/: scene_sync.h
hylink/src/: main.c
hylink/src/hylink/: hylink.c  hylink.h  hylinkListFunc.c  hylinkRecv.c  hylinkRecv.h  hylinkSend.c  scene_adapter.c  scene_adapter.h
hylink/src/hytool/: client.c
hylink/src/local_scene/: scene_list.c  scene_sync.c
hylink/u86/: u86_driver.c  u86_driver.h
libhylink/: CMakeLists.txt  makefile
libhylink/daemon/: daemon.c
libhylink/hyprofile/: _TZ3000_m4q79xxn.json
libhylink/install/hyprofile/: _TZ3000_0yfa8ngy.json  _TZ3000_9qkwnvil.json
libhylink/install/include/: frameCb.h  hylinkRecv.h
libhylink/src/hylink/: hylink.c  hylinkListFunc.c  hylinkRecv.c  hylinkSend.c
libhylink/src/hytool/: client.c  hytool.c
libhytool/: CMakeLists.txt  makefile
libhytool/tcp/epoll/: epollServer.c
paho_mqtt/: MQTTClient_publish_async.c  led.c  led.h  makefile  mqttapp  my_gpio_driver.c  my_gpio_driver.h
paho_mqtt/pack_tool/: pkg.sh
paho_mqtt/pack_tool/install/: S99honyar  honyar.conf  install.sh
paho_mqtt/src/: http_token.c  http_token.h  hy_mqtt_client.c  hy_mqtt_client.h  main.c  main.h  udp_broadcast.c  udp_broadcast.h
paho_mqtt/src/hytool/: mqtt_server.c  mqtt_server.h
tyzigbee/: makefile  tyzigbeeapp
tyzigbee/libtuya_u86/include/: tuya_gw_dp_api.h  tuya_gw_infra_api.h  tuya_gw_misc_api.h  tuya_gw_wifi_types.h  tuya_gw_z3_api.h
tyzigbee/profile/: _TYZB01_i8yav3hg.json  _TYZB01_lc17o7gh.json  _TZ3000_9qkwnvil.json  _TZ3000_m4q79xxn.json  _TZ3000_oh4ygxmc.json  _TZ3210_pcikchu8.json
tyzigbee/src/: main.c  main.h
tyzigbee/src/frame/: frameCb.h
tyzigbee/src/heartbeat/: heartbeat.c
tyzigbee/src/hylink/: hylink.c  hylink.h  hylinkListFunc.c  hylinkListFunc.h  hylinkRecv.c  hylinkSend.c  hylinkSend.h
tyzigbee/src/hytool/: client.c  hytool.c
tyzigbee/src/zigbee/: zigbee.c  zigbeeDispatch.c  zigbeeListFunc.c  zigbeeListFunc.h  zigbeeProfile.c
(+142 files in other folders)
